lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    IFS

Grammar

Rule 0     S' -> start
Rule 1     start -> LINE
Rule 2     LINE -> IDX ; LINE
Rule 3     LINE -> IFX LINE
Rule 4     LINE -> WHILEX LINE
Rule 5     LINE -> FORX LINE
Rule 6     LINE -> RETURNX ; LINE
Rule 7     LINE -> PRINTX ; LINE
Rule 8     LINE -> PRINTTRIANGLE ; LINE
Rule 9     LINE -> BLOCK LINE
Rule 10    LINE -> EMPTY
Rule 11    ONELINE -> IDX ;
Rule 12    ONELINE -> IFX
Rule 13    ONELINE -> WHILEX
Rule 14    ONELINE -> FORX
Rule 15    ONELINE -> RETURNX ;
Rule 16    ONELINE -> PRINTX ;
Rule 17    ONELINE -> PRINTTRIANGLE ;
Rule 18    BLOCK -> { LINE }
Rule 19    EMPTY -> <empty>
Rule 20    IDX -> ID = EXPRESSION
Rule 21    IDX -> ID = MATRIX
Rule 22    IDX -> ID = TABLE
Rule 23    IDX -> ID [ EXPRESSION ] = EXPRESSION
Rule 24    IDX -> ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
Rule 25    IDX -> ID [ EXPRESSION : EXPRESSION , EXPRESSION : EXPRESSION ] = EXPRESSION
Rule 26    IDX -> ID ADDASSIGN EXPRESSION
Rule 27    IDX -> ID ADDASSIGN MATRIX
Rule 28    IDX -> ID ADDASSIGN TABLE
Rule 29    IDX -> ID [ EXPRESSION ] ADDASSIGN EXPRESSION
Rule 30    IDX -> ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
Rule 31    IDX -> ID SUBASSIGN EXPRESSION
Rule 32    IDX -> ID SUBASSIGN MATRIX
Rule 33    IDX -> ID SUBASSIGN TABLE
Rule 34    IDX -> ID [ EXPRESSION ] SUBASSIGN EXPRESSION
Rule 35    IDX -> ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
Rule 36    IDX -> ID MULASSIGN EXPRESSION
Rule 37    IDX -> ID MULASSIGN MATRIX
Rule 38    IDX -> ID MULASSIGN TABLE
Rule 39    IDX -> ID [ EXPRESSION ] MULASSIGN EXPRESSION
Rule 40    IDX -> ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
Rule 41    IDX -> ID DIVASSIGN EXPRESSION
Rule 42    IDX -> ID DIVASSIGN MATRIX
Rule 43    IDX -> ID DIVASSIGN TABLE
Rule 44    IDX -> ID [ EXPRESSION ] DIVASSIGN EXPRESSION
Rule 45    IDX -> ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
Rule 46    ZEROSX -> ZEROS ( EXPRESSION )
Rule 47    ZEROSX -> ZEROS ( EXPRESSION , EXPRESSION )
Rule 48    ONESX -> ONES ( EXPRESSION )
Rule 49    ONESX -> ONES ( EXPRESSION , EXPRESSION )
Rule 50    EYEX -> EYE ( EXPRESSION )
Rule 51    EYEX -> EYE ( EXPRESSION , EXPRESSION )
Rule 52    MATRIX -> [ MATRIXINSIDE ]
Rule 53    MATRIX -> MATRIXEXPR
Rule 54    MATRIX -> ZEROSX
Rule 55    MATRIX -> ONESX
Rule 56    MATRIX -> EYEX
Rule 57    MATRIXINSIDE -> TABLE , MATRIXINSIDE
Rule 58    MATRIXINSIDE -> TABLE
Rule 59    TABLE -> [ VALUES ]
Rule 60    VALUES -> EXPRESSION , VALUES
Rule 61    VALUES -> EXPRESSION
Rule 62    MATRIXEXPR -> EXPRESSION DOTADD MATRIXEXPR
Rule 63    MATRIXEXPR -> EXPRESSION DOTSUB MATRIXEXPR
Rule 64    MATRIXEXPR -> EXPRESSION DOTMUL MATRIXEXPR
Rule 65    MATRIXEXPR -> EXPRESSION DOTDIV MATRIXEXPR
Rule 66    MATRIXEXPR -> EXPRESSION DOTADD EXPRESSION
Rule 67    MATRIXEXPR -> EXPRESSION DOTSUB EXPRESSION
Rule 68    MATRIXEXPR -> EXPRESSION DOTMUL EXPRESSION
Rule 69    MATRIXEXPR -> EXPRESSION DOTDIV EXPRESSION
Rule 70    MATRIXEXPR -> EXPRESSION '
Rule 71    IFX -> IF ( CONDITION ) ONELINE
Rule 72    IFX -> IF ( CONDITION ) BLOCK
Rule 73    IFX -> IF ( CONDITION ) ONELINE ELSE ONELINE
Rule 74    IFX -> IF ( CONDITION ) ONELINE ELSE BLOCK
Rule 75    IFX -> IF ( CONDITION ) BLOCK ELSE ONELINE
Rule 76    IFX -> IF ( CONDITION ) BLOCK ELSE BLOCK
Rule 77    LOOPLINE -> IDX ; LOOPLINE
Rule 78    LOOPLINE -> WHILEX LOOPLINE
Rule 79    LOOPLINE -> FORX LOOPLINE
Rule 80    LOOPLINE -> RETURNX ; LOOPLINE
Rule 81    LOOPLINE -> PRINTX ; LOOPLINE
Rule 82    LOOPLINE -> PRINTTRIANGLE ; LOOPLINE
Rule 83    LOOPLINE -> LOOPBLOCK LOOPLINE
Rule 84    LOOPLINE -> EMPTY
Rule 85    LOOPLINE -> LOOPIFX LOOPLINE
Rule 86    LOOPLINE -> BREAKX ; LOOPLINE
Rule 87    LOOPLINE -> CONTINUEX ; LOOPLINE
Rule 88    ONELOOPLINE -> IDX ;
Rule 89    ONELOOPLINE -> WHILEX
Rule 90    ONELOOPLINE -> FORX
Rule 91    ONELOOPLINE -> RETURNX ;
Rule 92    ONELOOPLINE -> PRINTX ;
Rule 93    ONELOOPLINE -> PRINTTRIANGLE ;
Rule 94    ONELOOPLINE -> LOOPIFX
Rule 95    ONELOOPLINE -> BREAKX ;
Rule 96    ONELOOPLINE -> CONTINUEX ;
Rule 97    BREAKX -> BREAK
Rule 98    CONTINUEX -> CONTINUE
Rule 99    LOOPBLOCK -> { LOOPLINE }
Rule 100   LOOPIFX -> IF ( CONDITION ) ONELOOPLINE
Rule 101   LOOPIFX -> IF ( CONDITION ) LOOPBLOCK
Rule 102   LOOPIFX -> IF ( CONDITION ) ONELOOPLINE ELSE ONELOOPLINE
Rule 103   LOOPIFX -> IF ( CONDITION ) ONELOOPLINE ELSE LOOPBLOCK
Rule 104   LOOPIFX -> IF ( CONDITION ) LOOPBLOCK ELSE ONELOOPLINE
Rule 105   LOOPIFX -> IF ( CONDITION ) LOOPBLOCK ELSE LOOPBLOCK
Rule 106   WHILEX -> WHILE ( CONDITION ) ONELOOPLINE
Rule 107   WHILEX -> WHILE ( CONDITION ) LOOPBLOCK
Rule 108   FORX -> FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
Rule 109   FORX -> FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
Rule 110   CONDITION -> EXPRESSION EQUAL EXPRESSION
Rule 111   CONDITION -> EXPRESSION UNEQUAL EXPRESSION
Rule 112   CONDITION -> EXPRESSION LESSEQUAL EXPRESSION
Rule 113   CONDITION -> EXPRESSION GREATEREQUAL EXPRESSION
Rule 114   CONDITION -> EXPRESSION > EXPRESSION
Rule 115   CONDITION -> EXPRESSION < EXPRESSION
Rule 116   PRINTX -> PRINT PRINTMANY
Rule 117   PRINTTRIANGLE -> PRINT STRING * EXPRESSION
Rule 118   PRINTMANY -> STRINGX , PRINTMANY
Rule 119   PRINTMANY -> EXPRESSION , PRINTMANY
Rule 120   PRINTMANY -> ID TABLE , PRINTMANY
Rule 121   PRINTMANY -> STRINGX
Rule 122   PRINTMANY -> EXPRESSION
Rule 123   PRINTMANY -> ID TABLE
Rule 124   STRINGX -> STRING
Rule 125   RETURNX -> RETURN EXPRESSION
Rule 126   EXPRESSION -> NUMBER
Rule 127   EXPRESSION -> FLOATNUMBER
Rule 128   EXPRESSION -> ID
Rule 129   EXPRESSION -> EXPRESSION + EXPRESSION
Rule 130   EXPRESSION -> EXPRESSION - EXPRESSION
Rule 131   EXPRESSION -> EXPRESSION * EXPRESSION
Rule 132   EXPRESSION -> EXPRESSION / EXPRESSION
Rule 133   EXPRESSION -> ( EXPRESSION )
Rule 134   EXPRESSION -> - EXPRESSION

Terminals, with rules where they appear

'                    : 70
(                    : 46 47 48 49 50 51 71 72 73 74 75 76 100 101 102 103 104 105 106 107 133
)                    : 46 47 48 49 50 51 71 72 73 74 75 76 100 101 102 103 104 105 106 107 133
*                    : 117 131
+                    : 129
,                    : 24 25 30 35 40 45 47 49 51 57 60 118 119 120
-                    : 130 134
/                    : 132
:                    : 25 25 108 109
;                    : 2 6 7 8 11 15 16 17 77 80 81 82 86 87 88 91 92 93 95 96
<                    : 115
=                    : 20 21 22 23 24 25 108 109
>                    : 114
ADDASSIGN            : 26 27 28 29 30
BREAK                : 97
COMMENT              : 
CONTINUE             : 98
DIVASSIGN            : 41 42 43 44 45
DOTADD               : 62 66
DOTDIV               : 65 69
DOTMUL               : 64 68
DOTSUB               : 63 67
ELSE                 : 73 74 75 76 102 103 104 105
EQUAL                : 110
EYE                  : 50 51
FLOATNUMBER          : 127
FOR                  : 108 109
GREATEREQUAL         : 113
ID                   : 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 108 109 120 123 128
IF                   : 71 72 73 74 75 76 100 101 102 103 104 105
IFS                  : 
LESSEQUAL            : 112
MULASSIGN            : 36 37 38 39 40
NUMBER               : 126
ONES                 : 48 49
PRINT                : 116 117
RETURN               : 125
STRING               : 117 124
SUBASSIGN            : 31 32 33 34 35
UNEQUAL              : 111
WHILE                : 106 107
ZEROS                : 46 47
[                    : 23 24 25 29 30 34 35 39 40 44 45 52 59
]                    : 23 24 25 29 30 34 35 39 40 44 45 52 59
error                : 
{                    : 18 99
}                    : 18 99

Nonterminals, with rules where they appear

BLOCK                : 9 72 74 75 76 76
BREAKX               : 86 95
CONDITION            : 71 72 73 74 75 76 100 101 102 103 104 105 106 107
CONTINUEX            : 87 96
EMPTY                : 10 84
EXPRESSION           : 20 23 23 24 24 24 25 25 25 25 25 26 29 29 30 30 30 31 34 34 35 35 35 36 39 39 40 40 40 41 44 44 45 45 45 46 47 47 48 49 49 50 51 51 60 61 62 63 64 65 66 66 67 67 68 68 69 69 70 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 117 119 122 125 129 129 130 130 131 131 132 132 133 134
EYEX                 : 56
FORX                 : 5 14 79 90
IDX                  : 2 11 77 88
IFX                  : 3 12
LINE                 : 1 2 3 4 5 6 7 8 9 18
LOOPBLOCK            : 83 101 103 104 105 105 107 109
LOOPIFX              : 85 94
LOOPLINE             : 77 78 79 80 81 82 83 85 86 87 99
MATRIX               : 21 27 32 37 42
MATRIXEXPR           : 53 62 63 64 65
MATRIXINSIDE         : 52 57
ONELINE              : 71 73 73 74 75
ONELOOPLINE          : 100 102 102 103 104 106 108
ONESX                : 55
PRINTMANY            : 116 118 119 120
PRINTTRIANGLE        : 8 17 82 93
PRINTX               : 7 16 81 92
RETURNX              : 6 15 80 91
STRINGX              : 118 121
TABLE                : 22 28 33 38 43 57 58 120 123
VALUES               : 59 60
WHILEX               : 4 13 78 89
ZEROSX               : 54
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . PRINTTRIANGLE ; LINE
    (9) LINE -> . BLOCK LINE
    (10) LINE -> . EMPTY
    (20) IDX -> . ID = EXPRESSION
    (21) IDX -> . ID = MATRIX
    (22) IDX -> . ID = TABLE
    (23) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (24) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (25) IDX -> . ID [ EXPRESSION : EXPRESSION , EXPRESSION : EXPRESSION ] = EXPRESSION
    (26) IDX -> . ID ADDASSIGN EXPRESSION
    (27) IDX -> . ID ADDASSIGN MATRIX
    (28) IDX -> . ID ADDASSIGN TABLE
    (29) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (30) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (31) IDX -> . ID SUBASSIGN EXPRESSION
    (32) IDX -> . ID SUBASSIGN MATRIX
    (33) IDX -> . ID SUBASSIGN TABLE
    (34) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (35) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (36) IDX -> . ID MULASSIGN EXPRESSION
    (37) IDX -> . ID MULASSIGN MATRIX
    (38) IDX -> . ID MULASSIGN TABLE
    (39) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (40) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (41) IDX -> . ID DIVASSIGN EXPRESSION
    (42) IDX -> . ID DIVASSIGN MATRIX
    (43) IDX -> . ID DIVASSIGN TABLE
    (44) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (45) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (71) IFX -> . IF ( CONDITION ) ONELINE
    (72) IFX -> . IF ( CONDITION ) BLOCK
    (73) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (74) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (75) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (76) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (106) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (107) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (108) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (109) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (125) RETURNX -> . RETURN EXPRESSION
    (116) PRINTX -> . PRINT PRINTMANY
    (117) PRINTTRIANGLE -> . PRINT STRING * EXPRESSION
    (18) BLOCK -> . { LINE }
    (19) EMPTY -> .

    ID              shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    {               shift and go to state 18
    $end            reduce using rule 19 (EMPTY -> .)

    start                          shift and go to state 1
    LINE                           shift and go to state 2
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    PRINTTRIANGLE                  shift and go to state 9
    BLOCK                          shift and go to state 10
    EMPTY                          shift and go to state 11

state 1

    (0) S' -> start .



state 2

    (1) start -> LINE .

    $end            reduce using rule 1 (start -> LINE .)


state 3

    (2) LINE -> IDX . ; LINE

    ;               shift and go to state 19


state 4

    (3) LINE -> IFX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . PRINTTRIANGLE ; LINE
    (9) LINE -> . BLOCK LINE
    (10) LINE -> . EMPTY
    (20) IDX -> . ID = EXPRESSION
    (21) IDX -> . ID = MATRIX
    (22) IDX -> . ID = TABLE
    (23) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (24) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (25) IDX -> . ID [ EXPRESSION : EXPRESSION , EXPRESSION : EXPRESSION ] = EXPRESSION
    (26) IDX -> . ID ADDASSIGN EXPRESSION
    (27) IDX -> . ID ADDASSIGN MATRIX
    (28) IDX -> . ID ADDASSIGN TABLE
    (29) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (30) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (31) IDX -> . ID SUBASSIGN EXPRESSION
    (32) IDX -> . ID SUBASSIGN MATRIX
    (33) IDX -> . ID SUBASSIGN TABLE
    (34) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (35) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (36) IDX -> . ID MULASSIGN EXPRESSION
    (37) IDX -> . ID MULASSIGN MATRIX
    (38) IDX -> . ID MULASSIGN TABLE
    (39) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (40) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (41) IDX -> . ID DIVASSIGN EXPRESSION
    (42) IDX -> . ID DIVASSIGN MATRIX
    (43) IDX -> . ID DIVASSIGN TABLE
    (44) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (45) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (71) IFX -> . IF ( CONDITION ) ONELINE
    (72) IFX -> . IF ( CONDITION ) BLOCK
    (73) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (74) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (75) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (76) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (106) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (107) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (108) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (109) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (125) RETURNX -> . RETURN EXPRESSION
    (116) PRINTX -> . PRINT PRINTMANY
    (117) PRINTTRIANGLE -> . PRINT STRING * EXPRESSION
    (18) BLOCK -> . { LINE }
    (19) EMPTY -> .

    ID              shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    {               shift and go to state 18
    $end            reduce using rule 19 (EMPTY -> .)
    }               reduce using rule 19 (EMPTY -> .)

    IFX                            shift and go to state 4
    LINE                           shift and go to state 20
    IDX                            shift and go to state 3
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    PRINTTRIANGLE                  shift and go to state 9
    BLOCK                          shift and go to state 10
    EMPTY                          shift and go to state 11

state 5

    (4) LINE -> WHILEX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . PRINTTRIANGLE ; LINE
    (9) LINE -> . BLOCK LINE
    (10) LINE -> . EMPTY
    (20) IDX -> . ID = EXPRESSION
    (21) IDX -> . ID = MATRIX
    (22) IDX -> . ID = TABLE
    (23) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (24) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (25) IDX -> . ID [ EXPRESSION : EXPRESSION , EXPRESSION : EXPRESSION ] = EXPRESSION
    (26) IDX -> . ID ADDASSIGN EXPRESSION
    (27) IDX -> . ID ADDASSIGN MATRIX
    (28) IDX -> . ID ADDASSIGN TABLE
    (29) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (30) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (31) IDX -> . ID SUBASSIGN EXPRESSION
    (32) IDX -> . ID SUBASSIGN MATRIX
    (33) IDX -> . ID SUBASSIGN TABLE
    (34) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (35) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (36) IDX -> . ID MULASSIGN EXPRESSION
    (37) IDX -> . ID MULASSIGN MATRIX
    (38) IDX -> . ID MULASSIGN TABLE
    (39) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (40) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (41) IDX -> . ID DIVASSIGN EXPRESSION
    (42) IDX -> . ID DIVASSIGN MATRIX
    (43) IDX -> . ID DIVASSIGN TABLE
    (44) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (45) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (71) IFX -> . IF ( CONDITION ) ONELINE
    (72) IFX -> . IF ( CONDITION ) BLOCK
    (73) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (74) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (75) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (76) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (106) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (107) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (108) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (109) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (125) RETURNX -> . RETURN EXPRESSION
    (116) PRINTX -> . PRINT PRINTMANY
    (117) PRINTTRIANGLE -> . PRINT STRING * EXPRESSION
    (18) BLOCK -> . { LINE }
    (19) EMPTY -> .

    ID              shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    {               shift and go to state 18
    $end            reduce using rule 19 (EMPTY -> .)
    }               reduce using rule 19 (EMPTY -> .)

    WHILEX                         shift and go to state 5
    LINE                           shift and go to state 21
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    PRINTTRIANGLE                  shift and go to state 9
    BLOCK                          shift and go to state 10
    EMPTY                          shift and go to state 11

state 6

    (5) LINE -> FORX . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . PRINTTRIANGLE ; LINE
    (9) LINE -> . BLOCK LINE
    (10) LINE -> . EMPTY
    (20) IDX -> . ID = EXPRESSION
    (21) IDX -> . ID = MATRIX
    (22) IDX -> . ID = TABLE
    (23) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (24) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (25) IDX -> . ID [ EXPRESSION : EXPRESSION , EXPRESSION : EXPRESSION ] = EXPRESSION
    (26) IDX -> . ID ADDASSIGN EXPRESSION
    (27) IDX -> . ID ADDASSIGN MATRIX
    (28) IDX -> . ID ADDASSIGN TABLE
    (29) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (30) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (31) IDX -> . ID SUBASSIGN EXPRESSION
    (32) IDX -> . ID SUBASSIGN MATRIX
    (33) IDX -> . ID SUBASSIGN TABLE
    (34) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (35) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (36) IDX -> . ID MULASSIGN EXPRESSION
    (37) IDX -> . ID MULASSIGN MATRIX
    (38) IDX -> . ID MULASSIGN TABLE
    (39) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (40) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (41) IDX -> . ID DIVASSIGN EXPRESSION
    (42) IDX -> . ID DIVASSIGN MATRIX
    (43) IDX -> . ID DIVASSIGN TABLE
    (44) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (45) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (71) IFX -> . IF ( CONDITION ) ONELINE
    (72) IFX -> . IF ( CONDITION ) BLOCK
    (73) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (74) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (75) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (76) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (106) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (107) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (108) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (109) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (125) RETURNX -> . RETURN EXPRESSION
    (116) PRINTX -> . PRINT PRINTMANY
    (117) PRINTTRIANGLE -> . PRINT STRING * EXPRESSION
    (18) BLOCK -> . { LINE }
    (19) EMPTY -> .

    ID              shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    {               shift and go to state 18
    $end            reduce using rule 19 (EMPTY -> .)
    }               reduce using rule 19 (EMPTY -> .)

    FORX                           shift and go to state 6
    LINE                           shift and go to state 22
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    PRINTTRIANGLE                  shift and go to state 9
    BLOCK                          shift and go to state 10
    EMPTY                          shift and go to state 11

state 7

    (6) LINE -> RETURNX . ; LINE

    ;               shift and go to state 23


state 8

    (7) LINE -> PRINTX . ; LINE

    ;               shift and go to state 24


state 9

    (8) LINE -> PRINTTRIANGLE . ; LINE

    ;               shift and go to state 25


state 10

    (9) LINE -> BLOCK . LINE
    (2) LINE -> . IDX ; LINE
    (3) LINE -> . IFX LINE
    (4) LINE -> . WHILEX LINE
    (5) LINE -> . FORX LINE
    (6) LINE -> . RETURNX ; LINE
    (7) LINE -> . PRINTX ; LINE
    (8) LINE -> . PRINTTRIANGLE ; LINE
    (9) LINE -> . BLOCK LINE
    (10) LINE -> . EMPTY
    (20) IDX -> . ID = EXPRESSION
    (21) IDX -> . ID = MATRIX
    (22) IDX -> . ID = TABLE
    (23) IDX -> . ID [ EXPRESSION ] = EXPRESSION
    (24) IDX -> . ID [ EXPRESSION , EXPRESSION ] = EXPRESSION
    (25) IDX -> . ID [ EXPRESSION : EXPRESSION , EXPRESSION : EXPRESSION ] = EXPRESSION
    (26) IDX -> . ID ADDASSIGN EXPRESSION
    (27) IDX -> . ID ADDASSIGN MATRIX
    (28) IDX -> . ID ADDASSIGN TABLE
    (29) IDX -> . ID [ EXPRESSION ] ADDASSIGN EXPRESSION
    (30) IDX -> . ID [ EXPRESSION , EXPRESSION ] ADDASSIGN EXPRESSION
    (31) IDX -> . ID SUBASSIGN EXPRESSION
    (32) IDX -> . ID SUBASSIGN MATRIX
    (33) IDX -> . ID SUBASSIGN TABLE
    (34) IDX -> . ID [ EXPRESSION ] SUBASSIGN EXPRESSION
    (35) IDX -> . ID [ EXPRESSION , EXPRESSION ] SUBASSIGN EXPRESSION
    (36) IDX -> . ID MULASSIGN EXPRESSION
    (37) IDX -> . ID MULASSIGN MATRIX
    (38) IDX -> . ID MULASSIGN TABLE
    (39) IDX -> . ID [ EXPRESSION ] MULASSIGN EXPRESSION
    (40) IDX -> . ID [ EXPRESSION , EXPRESSION ] MULASSIGN EXPRESSION
    (41) IDX -> . ID DIVASSIGN EXPRESSION
    (42) IDX -> . ID DIVASSIGN MATRIX
    (43) IDX -> . ID DIVASSIGN TABLE
    (44) IDX -> . ID [ EXPRESSION ] DIVASSIGN EXPRESSION
    (45) IDX -> . ID [ EXPRESSION , EXPRESSION ] DIVASSIGN EXPRESSION
    (71) IFX -> . IF ( CONDITION ) ONELINE
    (72) IFX -> . IF ( CONDITION ) BLOCK
    (73) IFX -> . IF ( CONDITION ) ONELINE ELSE ONELINE
    (74) IFX -> . IF ( CONDITION ) ONELINE ELSE BLOCK
    (75) IFX -> . IF ( CONDITION ) BLOCK ELSE ONELINE
    (76) IFX -> . IF ( CONDITION ) BLOCK ELSE BLOCK
    (106) WHILEX -> . WHILE ( CONDITION ) ONELOOPLINE
    (107) WHILEX -> . WHILE ( CONDITION ) LOOPBLOCK
    (108) FORX -> . FOR ID = EXPRESSION : EXPRESSION ONELOOPLINE
    (109) FORX -> . FOR ID = EXPRESSION : EXPRESSION LOOPBLOCK
    (125) RETURNX -> . RETURN EXPRESSION
    (116) PRINTX -> . PRINT PRINTMANY
    (117) PRINTTRIANGLE -> . PRINT STRING * EXPRESSION
    (18) BLOCK -> . { LINE }
    (19) EMPTY -> .

    ID              shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    RETURN          shift and go to state 16
    PRINT           shift and go to state 17
    {               shift and go to state 18
    $end            reduce using rule 19 (EMPTY -> .)
    }               reduce using rule 19 (EMPTY -> .)

    BLOCK                          shift and go to state 10
    LINE                           shift and go to state 26
    IDX                            shift and go to state 3
    IFX                            shift and go to state 4
    WHILEX                         shift and go to state 5
    FORX                           shift and go to state 6
    RETURNX                        shift and go to state 7
    PRINTX                         shift and go to state 8
    PRINTTRIANGLE                  shift and go to state 9
    EMPTY                          shift and go to state 11

state 11

    (10) LINE -> EMPTY .

    $end            reduce using rule 10 (LINE -> EMPTY .)
    }               reduce using rule 10 (LINE -> EMPTY .)


state 12
